fix: spacing between activity cards

--- a/app_sdece/css/modal.css
+++ b/app_sdece/css/modal.css
@@ -818,7 +818,7 @@ button {
 	border-style: solid;
 	border-width: 1px;
 	border-radius: 0.5rem;
-	padding: 1.3rem 1.5rem;
+	padding: 1.3rem 1.5rem 0.7rem 1.5rem;
 	margin-bottom: 1.2rem;
 }
 .modal-card-header-information {
@@ -922,4 +922,22 @@ button {
 	border-bottom: 0.8px solid #e5e7eb;
 	margin-bottom: 1rem;
 	margin-top: -0.2rem;
+}
+
+.modal-card-activity {
+	border-color: #e5e7eb;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 0.5rem;
+	padding: 1.3rem 1.5rem;
+	margin-bottom: 0.5rem;
+}
+
+.modal-card-information {
+	border-color: #e5e7eb;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 0.5rem;
+	padding: 1.3rem 1.5rem 0.7rem 1.5rem;
+	margin-bottom: 1rem;
 }
